--- a/bla/engine.org
+++ b/bla/engine.org
@@ -1,18 +1,18 @@
 * TODO [#A] Sound
-** TODO [#A] Musik
+** DONE [#A] Musik
 ** TODO [#A] Effekte
 * TODO Icon
 ** DONE [#A] Besseres Icon?
-** ShowOrbit Icon
-** Show/Hide Toggle
+** DONE ShowOrbit Icon
+** DONE Show/Hide Toggle
 ** Info Icon
-** Gewicht Plus/Minus
-* TODO UI Ingame
-** Zeit / Ticks ahead zusammen immer wählbar --> Neues Widget @ Mainscreen
-** Weniger ist mehr --> Toggle Widgets @ Mainscreen
+** DONE Gewicht Plus/Minus
+* DONE UI Ingame
+** DONE Zeit / Ticks ahead zusammen immer wählbar --> Neues Widget @ Mainscreen
+** DONE Weniger ist mehr --> Toggle Widgets @ Mainscreen
 *** Menü links toggle
 *** Infobox toggle
-** ShowOrbit Button @ seltoggles
+** DONE ShowOrbit Button @ seltoggles
 * TODO [#B] Planeten-Texturen
 ** DONE [#A] Texturen für HD-Screens
 ** TODO [#B] Noch eine Textur um Glow abzubilden
